--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Solar System",
+  "name": "@mdasifnasin/Solar System",
   "version": "6.7.6",
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
   "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
@@ -24,5 +24,9 @@
     "chai": "*",
     "chai-http": "*",
     "mocha": "*"
-  }
+  },
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/octocat/my-other-repo.git"
+    } 
 }
