--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,7 +1,8 @@
 name: Publish Package to GitHub NPM Registry
 
 on: 
-  workflow_dispatch: 
+  workflow_dispatch:
+  push:
   release: 
     types: published
     
