--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -49,5 +49,7 @@ jobs:
               sleep 2
             done
         - name: Run tests
-          run: ./run-tests.sh
+          run: |
+            chmod +x run-tests.sh
+            ./run-tests.sh
 
